syntax = "proto3";

package ensign.v1beta1;
option go_package = "github.com/rotationalio/ensign/pkg/api/v1beta1;api";

import "ensign/v1beta1/event.proto";
import "google/protobuf/timestamp.proto";


message Topic {
    string id = 1;
    string name = 2;
    repeated Type types = 3;
    repeated Region regions = 4;

    bool readonly = 14;
    google.protobuf.Timestamp created = 15;
}

message TopicsPage {
    repeated Topic topics = 1;
    string next_page_token = 2;
}

message TopicMod {
    enum Operation {
        NOOP = 0;
        ARCHIVE = 1; // makes the topic readonly
        DESTROY = 2; // deletes the topic and removes all of its data
    }

    string id = 1;
    Operation operation = 2;
}

message TopicTombstone {
    enum Status {
        UNKNOWN = 0;
        READONLY = 1;
        DELETING = 2;
    }

    string id = 1;
    Status state = 2;
}